roles/nat_meta/files/debian.rules.v4
*nat
:PREROUTING ACCEPT [13:1945]
:INPUT ACCEPT [13:1945]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i eth0 -p tcp --dport 61001 -j DNAT --to 10.4.0.1:22
-A PREROUTING -i eth0 -p tcp --dport 61002 -j DNAT --to 10.4.0.2:22
-A PREROUTING -i eth0 -p tcp --dport 61003 -j DNAT --to 10.4.0.3:22
-A PREROUTING -i eth0 -p tcp --dport 61004 -j DNAT --to 10.4.0.4:22
-A PREROUTING -i eth0 -p tcp --dport 61005 -j DNAT --to 10.4.0.5:22
-A PREROUTING -i eth0 -p tcp --dport 61006 -j DNAT --to 10.4.0.6:22
-A PREROUTING -i eth0 -p tcp --dport 61007 -j DNAT --to 10.4.0.7:22
-A PREROUTING -i eth0 -p tcp --dport 61008 -j DNAT --to 10.4.0.8:22
-A PREROUTING -i eth0 -p tcp --dport 61009 -j DNAT --to 10.4.0.9:22
-A PREROUTING -i eth0 -p tcp --dport 61010 -j DNAT --to 10.4.0.10:22
-A PREROUTING -i eth0 -p tcp --dport 61011 -j DNAT --to 10.4.0.11:22
-A PREROUTING -i eth0 -p tcp --dport 61012 -j DNAT --to 10.4.0.12:22
-A PREROUTING -i eth0 -p tcp --dport 61013 -j DNAT --to 10.4.0.13:22
-A PREROUTING -i eth0 -p tcp --dport 61014 -j DNAT --to 10.4.0.14:22
-A PREROUTING -i eth0 -p tcp --dport 61015 -j DNAT --to 10.4.0.15:22
-A PREROUTING -i eth0 -p tcp --dport 61016 -j DNAT --to 10.4.0.16:22
-A PREROUTING -i eth0 -p tcp --dport 61017 -j DNAT --to 10.4.0.17:22
-A PREROUTING -i eth0 -p tcp --dport 61018 -j DNAT --to 10.4.0.18:22
-A PREROUTING -i eth0 -p tcp --dport 61019 -j DNAT --to 10.4.0.19:22
-A PREROUTING -i eth0 -p tcp --dport 61020 -j DNAT --to 10.4.0.20:22
-A PREROUTING -i eth0 -p tcp --dport 61021 -j DNAT --to 10.4.0.21:22
-A PREROUTING -i eth0 -p tcp --dport 61022 -j DNAT --to 10.4.0.22:22
-A PREROUTING -i eth0 -p tcp --dport 61023 -j DNAT --to 10.4.0.23:22
-A PREROUTING -i eth0 -p tcp --dport 61024 -j DNAT --to 10.4.0.24:22
-A PREROUTING -i eth0 -p tcp --dport 61025 -j DNAT --to 10.4.0.25:22
-A PREROUTING -i eth0 -p tcp --dport 61026 -j DNAT --to 10.4.0.26:22
-A PREROUTING -i eth0 -p tcp --dport 61027 -j DNAT --to 10.4.0.27:22
-A PREROUTING -i eth0 -p tcp --dport 61028 -j DNAT --to 10.4.0.28:22
-A PREROUTING -i eth0 -p tcp --dport 61029 -j DNAT --to 10.4.0.29:22
-A PREROUTING -i eth0 -p tcp --dport 61030 -j DNAT --to 10.4.0.30:22
-A PREROUTING -i eth0 -p tcp --dport 61031 -j DNAT --to 10.4.0.31:22
-A PREROUTING -i eth0 -p tcp --dport 61032 -j DNAT --to 10.4.0.32:22
-A PREROUTING -i eth0 -p tcp --dport 61033 -j DNAT --to 10.4.0.33:22
-A PREROUTING -i eth0 -p tcp --dport 61034 -j DNAT --to 10.4.0.34:22
-A PREROUTING -i eth0 -p tcp --dport 61035 -j DNAT --to 10.4.0.35:22
-A PREROUTING -i eth0 -p tcp --dport 61036 -j DNAT --to 10.4.0.36:22
-A PREROUTING -i eth0 -p tcp --dport 61037 -j DNAT --to 10.4.0.37:22
-A PREROUTING -i eth0 -p tcp --dport 61038 -j DNAT --to 10.4.0.38:22
-A PREROUTING -i eth0 -p tcp --dport 61039 -j DNAT --to 10.4.0.39:22
-A PREROUTING -i eth0 -p tcp --dport 61040 -j DNAT --to 10.4.0.40:22
-A PREROUTING -i eth0 -p tcp --dport 61041 -j DNAT --to 10.4.0.41:22
-A PREROUTING -i eth0 -p tcp --dport 61042 -j DNAT --to 10.4.0.42:22
-A PREROUTING -i eth0 -p tcp --dport 61043 -j DNAT --to 10.4.0.43:22
-A PREROUTING -i eth0 -p tcp --dport 61044 -j DNAT --to 10.4.0.44:22
-A PREROUTING -i eth0 -p tcp --dport 61045 -j DNAT --to 10.4.0.45:22
-A PREROUTING -i eth0 -p tcp --dport 61046 -j DNAT --to 10.4.0.46:22
-A PREROUTING -i eth0 -p tcp --dport 61047 -j DNAT --to 10.4.0.47:22
-A PREROUTING -i eth0 -p tcp --dport 61048 -j DNAT --to 10.4.0.48:22
-A PREROUTING -i eth0 -p tcp --dport 61049 -j DNAT --to 10.4.0.49:22
-A PREROUTING -i eth0 -p tcp --dport 61050 -j DNAT --to 10.4.0.50:22
-A PREROUTING -i eth0 -p tcp --dport 61051 -j DNAT --to 10.4.0.51:22
-A PREROUTING -i eth0 -p tcp --dport 61052 -j DNAT --to 10.4.0.52:22
-A PREROUTING -i eth0 -p tcp --dport 61053 -j DNAT --to 10.4.0.53:22
-A PREROUTING -i eth0 -p tcp --dport 61054 -j DNAT --to 10.4.0.54:22
-A PREROUTING -i eth0 -p tcp --dport 61055 -j DNAT --to 10.4.0.55:22
-A PREROUTING -i eth0 -p tcp --dport 61056 -j DNAT --to 10.4.0.56:22
-A PREROUTING -i eth0 -p tcp --dport 61057 -j DNAT --to 10.4.0.57:22
-A PREROUTING -i eth0 -p tcp --dport 61058 -j DNAT --to 10.4.0.58:22
-A PREROUTING -i eth0 -p tcp --dport 61059 -j DNAT --to 10.4.0.59:22
-A PREROUTING -i eth0 -p tcp --dport 61060 -j DNAT --to 10.4.0.60:22
-A PREROUTING -i eth0 -p tcp --dport 61061 -j DNAT --to 10.4.0.61:22
-A PREROUTING -i eth0 -p tcp --dport 61062 -j DNAT --to 10.4.0.62:22
-A PREROUTING -i eth0 -p tcp --dport 61063 -j DNAT --to 10.4.0.63:22
-A PREROUTING -i eth0 -p tcp --dport 61064 -j DNAT --to 10.4.0.64:22
-A PREROUTING -i eth0 -p tcp --dport 61065 -j DNAT --to 10.4.0.65:22
-A PREROUTING -i eth0 -p tcp --dport 61066 -j DNAT --to 10.4.0.66:22
-A PREROUTING -i eth0 -p tcp --dport 61067 -j DNAT --to 10.4.0.67:22
-A PREROUTING -i eth0 -p tcp --dport 61068 -j DNAT --to 10.4.0.68:22
-A PREROUTING -i eth0 -p tcp --dport 61069 -j DNAT --to 10.4.0.69:22
-A PREROUTING -i eth0 -p tcp --dport 61070 -j DNAT --to 10.4.0.70:22
-A PREROUTING -i eth0 -p tcp --dport 61071 -j DNAT --to 10.4.0.71:22
-A PREROUTING -i eth0 -p tcp --dport 61072 -j DNAT --to 10.4.0.72:22
-A PREROUTING -i eth0 -p tcp --dport 61073 -j DNAT --to 10.4.0.73:22
-A PREROUTING -i eth0 -p tcp --dport 61074 -j DNAT --to 10.4.0.74:22
-A PREROUTING -i eth0 -p tcp --dport 61075 -j DNAT --to 10.4.0.75:22
-A PREROUTING -i eth0 -p tcp --dport 61076 -j DNAT --to 10.4.0.76:22
-A PREROUTING -i eth0 -p tcp --dport 61077 -j DNAT --to 10.4.0.77:22
-A PREROUTING -i eth0 -p tcp --dport 61078 -j DNAT --to 10.4.0.78:22
-A PREROUTING -i eth0 -p tcp --dport 61079 -j DNAT --to 10.4.0.79:22
-A PREROUTING -i eth0 -p tcp --dport 61080 -j DNAT --to 10.4.0.80:22
-A PREROUTING -i eth0 -p tcp --dport 61081 -j DNAT --to 10.4.0.81:22
-A PREROUTING -i eth0 -p tcp --dport 61082 -j DNAT --to 10.4.0.82:22
-A PREROUTING -i eth0 -p tcp --dport 61083 -j DNAT --to 10.4.0.83:22
-A PREROUTING -i eth0 -p tcp --dport 61084 -j DNAT --to 10.4.0.84:22
-A PREROUTING -i eth0 -p tcp --dport 61085 -j DNAT --to 10.4.0.85:22
-A PREROUTING -i eth0 -p tcp --dport 61086 -j DNAT --to 10.4.0.86:22
-A PREROUTING -i eth0 -p tcp --dport 61087 -j DNAT --to 10.4.0.87:22
-A PREROUTING -i eth0 -p tcp --dport 61088 -j DNAT --to 10.4.0.88:22
-A PREROUTING -i eth0 -p tcp --dport 61089 -j DNAT --to 10.4.0.89:22
-A PREROUTING -i eth0 -p tcp --dport 61090 -j DNAT --to 10.4.0.90:22
-A PREROUTING -i eth0 -p tcp --dport 61091 -j DNAT --to 10.4.0.91:22
-A PREROUTING -i eth0 -p tcp --dport 61092 -j DNAT --to 10.4.0.92:22
-A PREROUTING -i eth0 -p tcp --dport 61093 -j DNAT --to 10.4.0.93:22
-A PREROUTING -i eth0 -p tcp --dport 61094 -j DNAT --to 10.4.0.94:22
-A PREROUTING -i eth0 -p tcp --dport 61095 -j DNAT --to 10.4.0.95:22
-A PREROUTING -i eth0 -p tcp --dport 61096 -j DNAT --to 10.4.0.96:22
-A PREROUTING -i eth0 -p tcp --dport 61097 -j DNAT --to 10.4.0.97:22
-A PREROUTING -i eth0 -p tcp --dport 61098 -j DNAT --to 10.4.0.98:22
-A PREROUTING -i eth0 -p tcp --dport 61099 -j DNAT --to 10.4.0.99:22
-A PREROUTING -i eth0 -p tcp --dport 61100 -j DNAT --to 10.4.0.100:22
-A PREROUTING -i eth0 -p tcp --dport 61101 -j DNAT --to 10.4.0.101:22
-A PREROUTING -i eth0 -p tcp --dport 61102 -j DNAT --to 10.4.0.102:22
-A PREROUTING -i eth0 -p tcp --dport 61103 -j DNAT --to 10.4.0.103:22
-A PREROUTING -i eth0 -p tcp --dport 61104 -j DNAT --to 10.4.0.104:22
-A PREROUTING -i eth0 -p tcp --dport 61105 -j DNAT --to 10.4.0.105:22
-A PREROUTING -i eth0 -p tcp --dport 61106 -j DNAT --to 10.4.0.106:22
-A PREROUTING -i eth0 -p tcp --dport 61107 -j DNAT --to 10.4.0.107:22
-A PREROUTING -i eth0 -p tcp --dport 61108 -j DNAT --to 10.4.0.108:22
-A PREROUTING -i eth0 -p tcp --dport 61109 -j DNAT --to 10.4.0.109:22
-A PREROUTING -i eth0 -p tcp --dport 61110 -j DNAT --to 10.4.0.110:22
-A PREROUTING -i eth0 -p tcp --dport 61111 -j DNAT --to 10.4.0.111:22
-A PREROUTING -i eth0 -p tcp --dport 61112 -j DNAT --to 10.4.0.112:22
-A PREROUTING -i eth0 -p tcp --dport 61113 -j DNAT --to 10.4.0.113:22
-A PREROUTING -i eth0 -p tcp --dport 61114 -j DNAT --to 10.4.0.114:22
-A PREROUTING -i eth0 -p tcp --dport 61115 -j DNAT --to 10.4.0.115:22
-A PREROUTING -i eth0 -p tcp --dport 61116 -j DNAT --to 10.4.0.116:22
-A PREROUTING -i eth0 -p tcp --dport 61117 -j DNAT --to 10.4.0.117:22
-A PREROUTING -i eth0 -p tcp --dport 61118 -j DNAT --to 10.4.0.118:22
-A PREROUTING -i eth0 -p tcp --dport 61119 -j DNAT --to 10.4.0.119:22
-A PREROUTING -i eth0 -p tcp --dport 61120 -j DNAT --to 10.4.0.120:22
-A PREROUTING -i eth0 -p tcp --dport 61121 -j DNAT --to 10.4.0.121:22
-A PREROUTING -i eth0 -p tcp --dport 61122 -j DNAT --to 10.4.0.122:22
-A PREROUTING -i eth0 -p tcp --dport 61123 -j DNAT --to 10.4.0.123:22
-A PREROUTING -i eth0 -p tcp --dport 61124 -j DNAT --to 10.4.0.124:22
-A PREROUTING -i eth0 -p tcp --dport 61125 -j DNAT --to 10.4.0.125:22
-A PREROUTING -i eth0 -p tcp --dport 61126 -j DNAT --to 10.4.0.126:22
-A PREROUTING -i eth0 -p tcp --dport 61127 -j DNAT --to 10.4.0.127:22
-A PREROUTING -i eth0 -p tcp --dport 61128 -j DNAT --to 10.4.0.128:22
-A PREROUTING -i eth0 -p tcp --dport 61129 -j DNAT --to 10.4.0.129:22
-A PREROUTING -i eth0 -p tcp --dport 61130 -j DNAT --to 10.4.0.130:22
-A PREROUTING -i eth0 -p tcp --dport 61131 -j DNAT --to 10.4.0.131:22
-A PREROUTING -i eth0 -p tcp --dport 61132 -j DNAT --to 10.4.0.132:22
-A PREROUTING -i eth0 -p tcp --dport 61133 -j DNAT --to 10.4.0.133:22
-A PREROUTING -i eth0 -p tcp --dport 61134 -j DNAT --to 10.4.0.134:22
-A PREROUTING -i eth0 -p tcp --dport 61135 -j DNAT --to 10.4.0.135:22
-A PREROUTING -i eth0 -p tcp --dport 61136 -j DNAT --to 10.4.0.136:22
-A PREROUTING -i eth0 -p tcp --dport 61137 -j DNAT --to 10.4.0.137:22
-A PREROUTING -i eth0 -p tcp --dport 61138 -j DNAT --to 10.4.0.138:22
-A PREROUTING -i eth0 -p tcp --dport 61139 -j DNAT --to 10.4.0.139:22
-A PREROUTING -i eth0 -p tcp --dport 61140 -j DNAT --to 10.4.0.140:22
-A PREROUTING -i eth0 -p tcp --dport 61141 -j DNAT --to 10.4.0.141:22
-A PREROUTING -i eth0 -p tcp --dport 61142 -j DNAT --to 10.4.0.142:22
-A PREROUTING -i eth0 -p tcp --dport 61143 -j DNAT --to 10.4.0.143:22
-A PREROUTING -i eth0 -p tcp --dport 61144 -j DNAT --to 10.4.0.144:22
-A PREROUTING -i eth0 -p tcp --dport 61145 -j DNAT --to 10.4.0.145:22
-A PREROUTING -i eth0 -p tcp --dport 61146 -j DNAT --to 10.4.0.146:22
-A PREROUTING -i eth0 -p tcp --dport 61147 -j DNAT --to 10.4.0.147:22
-A PREROUTING -i eth0 -p tcp --dport 61148 -j DNAT --to 10.4.0.148:22
-A PREROUTING -i eth0 -p tcp --dport 61149 -j DNAT --to 10.4.0.149:22
-A PREROUTING -i eth0 -p tcp --dport 61150 -j DNAT --to 10.4.0.150:22
-A PREROUTING -i eth0 -p tcp --dport 61151 -j DNAT --to 10.4.0.151:22
-A PREROUTING -i eth0 -p tcp --dport 61152 -j DNAT --to 10.4.0.152:22
-A PREROUTING -i eth0 -p tcp --dport 61153 -j DNAT --to 10.4.0.153:22
-A PREROUTING -i eth0 -p tcp --dport 61154 -j DNAT --to 10.4.0.154:22
-A PREROUTING -i eth0 -p tcp --dport 61155 -j DNAT --to 10.4.0.155:22
-A PREROUTING -i eth0 -p tcp --dport 61156 -j DNAT --to 10.4.0.156:22
-A PREROUTING -i eth0 -p tcp --dport 61157 -j DNAT --to 10.4.0.157:22
-A PREROUTING -i eth0 -p tcp --dport 61158 -j DNAT --to 10.4.0.158:22
-A PREROUTING -i eth0 -p tcp --dport 61159 -j DNAT --to 10.4.0.159:22
-A PREROUTING -i eth0 -p tcp --dport 61160 -j DNAT --to 10.4.0.160:22
-A PREROUTING -i eth0 -p tcp --dport 61161 -j DNAT --to 10.4.0.161:22
-A PREROUTING -i eth0 -p tcp --dport 61162 -j DNAT --to 10.4.0.162:22
-A PREROUTING -i eth0 -p tcp --dport 61163 -j DNAT --to 10.4.0.163:22
-A PREROUTING -i eth0 -p tcp --dport 61164 -j DNAT --to 10.4.0.164:22
-A PREROUTING -i eth0 -p tcp --dport 61165 -j DNAT --to 10.4.0.165:22
-A PREROUTING -i eth0 -p tcp --dport 61166 -j DNAT --to 10.4.0.166:22
-A PREROUTING -i eth0 -p tcp --dport 61167 -j DNAT --to 10.4.0.167:22
-A PREROUTING -i eth0 -p tcp --dport 61168 -j DNAT --to 10.4.0.168:22
-A PREROUTING -i eth0 -p tcp --dport 61169 -j DNAT --to 10.4.0.169:22
-A PREROUTING -i eth0 -p tcp --dport 61170 -j DNAT --to 10.4.0.170:22
-A PREROUTING -i eth0 -p tcp --dport 61171 -j DNAT --to 10.4.0.171:22
-A PREROUTING -i eth0 -p tcp --dport 61172 -j DNAT --to 10.4.0.172:22
-A PREROUTING -i eth0 -p tcp --dport 61173 -j DNAT --to 10.4.0.173:22
-A PREROUTING -i eth0 -p tcp --dport 61174 -j DNAT --to 10.4.0.174:22
-A PREROUTING -i eth0 -p tcp --dport 61175 -j DNAT --to 10.4.0.175:22
-A PREROUTING -i eth0 -p tcp --dport 61176 -j DNAT --to 10.4.0.176:22
-A PREROUTING -i eth0 -p tcp --dport 61177 -j DNAT --to 10.4.0.177:22
-A PREROUTING -i eth0 -p tcp --dport 61178 -j DNAT --to 10.4.0.178:22
-A PREROUTING -i eth0 -p tcp --dport 61179 -j DNAT --to 10.4.0.179:22
-A PREROUTING -i eth0 -p tcp --dport 61180 -j DNAT --to 10.4.0.180:22
-A PREROUTING -i eth0 -p tcp --dport 61181 -j DNAT --to 10.4.0.181:22
-A PREROUTING -i eth0 -p tcp --dport 61182 -j DNAT --to 10.4.0.182:22
-A PREROUTING -i eth0 -p tcp --dport 61183 -j DNAT --to 10.4.0.183:22
-A PREROUTING -i eth0 -p tcp --dport 61184 -j DNAT --to 10.4.0.184:22
-A PREROUTING -i eth0 -p tcp --dport 61185 -j DNAT --to 10.4.0.185:22
-A PREROUTING -i eth0 -p tcp --dport 61186 -j DNAT --to 10.4.0.186:22
-A PREROUTING -i eth0 -p tcp --dport 61187 -j DNAT --to 10.4.0.187:22
-A PREROUTING -i eth0 -p tcp --dport 61188 -j DNAT --to 10.4.0.188:22
-A PREROUTING -i eth0 -p tcp --dport 61189 -j DNAT --to 10.4.0.189:22
-A PREROUTING -i eth0 -p tcp --dport 61190 -j DNAT --to 10.4.0.190:22
-A PREROUTING -i eth0 -p tcp --dport 61191 -j DNAT --to 10.4.0.191:22
-A PREROUTING -i eth0 -p tcp --dport 61192 -j DNAT --to 10.4.0.192:22
-A PREROUTING -i eth0 -p tcp --dport 61193 -j DNAT --to 10.4.0.193:22
-A PREROUTING -i eth0 -p tcp --dport 61194 -j DNAT --to 10.4.0.194:22
-A PREROUTING -i eth0 -p tcp --dport 61195 -j DNAT --to 10.4.0.195:22
-A PREROUTING -i eth0 -p tcp --dport 61196 -j DNAT --to 10.4.0.196:22
-A PREROUTING -i eth0 -p tcp --dport 61197 -j DNAT --to 10.4.0.197:22
-A PREROUTING -i eth0 -p tcp --dport 61198 -j DNAT --to 10.4.0.198:22
-A PREROUTING -i eth0 -p tcp --dport 61199 -j DNAT --to 10.4.0.199:22
-A PREROUTING -i eth0 -p tcp --dport 61200 -j DNAT --to 10.4.0.200:22
-A PREROUTING -i eth0 -p tcp --dport 61201 -j DNAT --to 10.4.0.201:22
-A PREROUTING -i eth0 -p tcp --dport 61202 -j DNAT --to 10.4.0.202:22
-A PREROUTING -i eth0 -p tcp --dport 61203 -j DNAT --to 10.4.0.203:22
-A PREROUTING -i eth0 -p tcp --dport 61204 -j DNAT --to 10.4.0.204:22
-A PREROUTING -i eth0 -p tcp --dport 61205 -j DNAT --to 10.4.0.205:22
-A PREROUTING -i eth0 -p tcp --dport 61206 -j DNAT --to 10.4.0.206:22
-A PREROUTING -i eth0 -p tcp --dport 61207 -j DNAT --to 10.4.0.207:22
-A PREROUTING -i eth0 -p tcp --dport 61208 -j DNAT --to 10.4.0.208:22
-A PREROUTING -i eth0 -p tcp --dport 61209 -j DNAT --to 10.4.0.209:22
-A PREROUTING -i eth0 -p tcp --dport 61210 -j DNAT --to 10.4.0.210:22
-A PREROUTING -i eth0 -p tcp --dport 61211 -j DNAT --to 10.4.0.211:22
-A PREROUTING -i eth0 -p tcp --dport 61212 -j DNAT --to 10.4.0.212:22
-A PREROUTING -i eth0 -p tcp --dport 61213 -j DNAT --to 10.4.0.213:22
-A PREROUTING -i eth0 -p tcp --dport 61214 -j DNAT --to 10.4.0.214:22
-A PREROUTING -i eth0 -p tcp --dport 61215 -j DNAT --to 10.4.0.215:22
-A PREROUTING -i eth0 -p tcp --dport 61216 -j DNAT --to 10.4.0.216:22
-A PREROUTING -i eth0 -p tcp --dport 61217 -j DNAT --to 10.4.0.217:22
-A PREROUTING -i eth0 -p tcp --dport 61218 -j DNAT --to 10.4.0.218:22
-A PREROUTING -i eth0 -p tcp --dport 61219 -j DNAT --to 10.4.0.219:22
-A PREROUTING -i eth0 -p tcp --dport 61220 -j DNAT --to 10.4.0.220:22
-A PREROUTING -i eth0 -p tcp --dport 61221 -j DNAT --to 10.4.0.221:22
-A PREROUTING -i eth0 -p tcp --dport 61222 -j DNAT --to 10.4.0.222:22
-A PREROUTING -i eth0 -p tcp --dport 61223 -j DNAT --to 10.4.0.223:22
-A PREROUTING -i eth0 -p tcp --dport 61224 -j DNAT --to 10.4.0.224:22
-A PREROUTING -i eth0 -p tcp --dport 61225 -j DNAT --to 10.4.0.225:22
-A PREROUTING -i eth0 -p tcp --dport 61226 -j DNAT --to 10.4.0.226:22
-A PREROUTING -i eth0 -p tcp --dport 61227 -j DNAT --to 10.4.0.227:22
-A PREROUTING -i eth0 -p tcp --dport 61228 -j DNAT --to 10.4.0.228:22
-A PREROUTING -i eth0 -p tcp --dport 61229 -j DNAT --to 10.4.0.229:22
-A PREROUTING -i eth0 -p tcp --dport 61230 -j DNAT --to 10.4.0.230:22
-A PREROUTING -i eth0 -p tcp --dport 61231 -j DNAT --to 10.4.0.231:22
-A PREROUTING -i eth0 -p tcp --dport 61232 -j DNAT --to 10.4.0.232:22
-A PREROUTING -i eth0 -p tcp --dport 61233 -j DNAT --to 10.4.0.233:22
-A PREROUTING -i eth0 -p tcp --dport 61234 -j DNAT --to 10.4.0.234:22
-A PREROUTING -i eth0 -p tcp --dport 61235 -j DNAT --to 10.4.0.235:22
-A PREROUTING -i eth0 -p tcp --dport 61236 -j DNAT --to 10.4.0.236:22
-A PREROUTING -i eth0 -p tcp --dport 61237 -j DNAT --to 10.4.0.237:22
-A PREROUTING -i eth0 -p tcp --dport 61238 -j DNAT --to 10.4.0.238:22
-A PREROUTING -i eth0 -p tcp --dport 61239 -j DNAT --to 10.4.0.239:22
-A PREROUTING -i eth0 -p tcp --dport 61240 -j DNAT --to 10.4.0.240:22
-A PREROUTING -i eth0 -p tcp --dport 61241 -j DNAT --to 10.4.0.241:22
-A PREROUTING -i eth0 -p tcp --dport 61242 -j DNAT --to 10.4.0.242:22
-A PREROUTING -i eth0 -p tcp --dport 61243 -j DNAT --to 10.4.0.243:22
-A PREROUTING -i eth0 -p tcp --dport 61244 -j DNAT --to 10.4.0.244:22
-A PREROUTING -i eth0 -p tcp --dport 61245 -j DNAT --to 10.4.0.245:22
-A PREROUTING -i eth0 -p tcp --dport 61246 -j DNAT --to 10.4.0.246:22
-A PREROUTING -i eth0 -p tcp --dport 61247 -j DNAT --to 10.4.0.247:22
-A PREROUTING -i eth0 -p tcp --dport 61248 -j DNAT --to 10.4.0.248:22
-A PREROUTING -i eth0 -p tcp --dport 61249 -j DNAT --to 10.4.0.249:22
-A PREROUTING -i eth0 -p tcp --dport 61250 -j DNAT --to 10.4.0.250:22
-A PREROUTING -i eth0 -p tcp --dport 61251 -j DNAT --to 10.4.0.251:22
-A PREROUTING -i eth0 -p tcp --dport 61252 -j DNAT --to 10.4.0.252:22
-A PREROUTING -i eth0 -p tcp --dport 61253 -j DNAT --to 10.4.0.253:22
-A PREROUTING -i eth0 -p tcp --dport 61254 -j DNAT --to 10.4.0.254:22
-A PREROUTING -i eth0 -p tcp --dport 64001 -j DNAT --to 10.4.4.1:22
-A PREROUTING -i eth0 -p tcp --dport 64002 -j DNAT --to 10.4.4.2:22
-A PREROUTING -i eth0 -p tcp --dport 64003 -j DNAT --to 10.4.4.3:22
-A PREROUTING -i eth0 -p tcp --dport 64004 -j DNAT --to 10.4.4.4:22
-A PREROUTING -i eth0 -p tcp --dport 64005 -j DNAT --to 10.4.4.5:22
-A PREROUTING -i eth0 -p tcp --dport 64006 -j DNAT --to 10.4.4.6:22
-A PREROUTING -i eth0 -p tcp --dport 64007 -j DNAT --to 10.4.4.7:22
-A PREROUTING -i eth0 -p tcp --dport 64008 -j DNAT --to 10.4.4.8:22
-A PREROUTING -i eth0 -p tcp --dport 64009 -j DNAT --to 10.4.4.9:22
-A PREROUTING -i eth0 -p tcp --dport 64010 -j DNAT --to 10.4.4.10:22
-A PREROUTING -i eth0 -p tcp --dport 64011 -j DNAT --to 10.4.4.11:22
-A PREROUTING -i eth0 -p tcp --dport 64012 -j DNAT --to 10.4.4.12:22
-A PREROUTING -i eth0 -p tcp --dport 64013 -j DNAT --to 10.4.4.13:22
-A PREROUTING -i eth0 -p tcp --dport 64014 -j DNAT --to 10.4.4.14:22
-A PREROUTING -i eth0 -p tcp --dport 64015 -j DNAT --to 10.4.4.15:22
-A PREROUTING -i eth0 -p tcp --dport 64016 -j DNAT --to 10.4.4.16:22
-A PREROUTING -i eth0 -p tcp --dport 64017 -j DNAT --to 10.4.4.17:22
-A PREROUTING -i eth0 -p tcp --dport 64018 -j DNAT --to 10.4.4.18:22
-A PREROUTING -i eth0 -p tcp --dport 64019 -j DNAT --to 10.4.4.19:22
-A PREROUTING -i eth0 -p tcp --dport 64020 -j DNAT --to 10.4.4.20:22
-A PREROUTING -i eth0 -p tcp --dport 64021 -j DNAT --to 10.4.4.21:22
-A PREROUTING -i eth0 -p tcp --dport 64022 -j DNAT --to 10.4.4.22:22
-A PREROUTING -i eth0 -p tcp --dport 64023 -j DNAT --to 10.4.4.23:22
-A PREROUTING -i eth0 -p tcp --dport 64024 -j DNAT --to 10.4.4.24:22
-A PREROUTING -i eth0 -p tcp --dport 64025 -j DNAT --to 10.4.4.25:22
-A PREROUTING -i eth0 -p tcp --dport 64026 -j DNAT --to 10.4.4.26:22
-A PREROUTING -i eth0 -p tcp --dport 64027 -j DNAT --to 10.4.4.27:22
-A PREROUTING -i eth0 -p tcp --dport 64028 -j DNAT --to 10.4.4.28:22
-A PREROUTING -i eth0 -p tcp --dport 64029 -j DNAT --to 10.4.4.29:22
-A PREROUTING -i eth0 -p tcp --dport 64030 -j DNAT --to 10.4.4.30:22
-A PREROUTING -i eth0 -p tcp --dport 64031 -j DNAT --to 10.4.4.31:22
-A PREROUTING -i eth0 -p tcp --dport 64032 -j DNAT --to 10.4.4.32:22
-A PREROUTING -i eth0 -p tcp --dport 64033 -j DNAT --to 10.4.4.33:22
-A PREROUTING -i eth0 -p tcp --dport 64034 -j DNAT --to 10.4.4.34:22
-A PREROUTING -i eth0 -p tcp --dport 64035 -j DNAT --to 10.4.4.35:22
-A PREROUTING -i eth0 -p tcp --dport 64036 -j DNAT --to 10.4.4.36:22
-A PREROUTING -i eth0 -p tcp --dport 64037 -j DNAT --to 10.4.4.37:22
-A PREROUTING -i eth0 -p tcp --dport 64038 -j DNAT --to 10.4.4.38:22
-A PREROUTING -i eth0 -p tcp --dport 64039 -j DNAT --to 10.4.4.39:22
-A PREROUTING -i eth0 -p tcp --dport 64040 -j DNAT --to 10.4.4.40:22
-A PREROUTING -i eth0 -p tcp --dport 64041 -j DNAT --to 10.4.4.41:22
-A PREROUTING -i eth0 -p tcp --dport 64042 -j DNAT --to 10.4.4.42:22
-A PREROUTING -i eth0 -p tcp --dport 64043 -j DNAT --to 10.4.4.43:22
-A PREROUTING -i eth0 -p tcp --dport 64044 -j DNAT --to 10.4.4.44:22
-A PREROUTING -i eth0 -p tcp --dport 64045 -j DNAT --to 10.4.4.45:22
-A PREROUTING -i eth0 -p tcp --dport 64046 -j DNAT --to 10.4.4.46:22
-A PREROUTING -i eth0 -p tcp --dport 64047 -j DNAT --to 10.4.4.47:22
-A PREROUTING -i eth0 -p tcp --dport 64048 -j DNAT --to 10.4.4.48:22
-A PREROUTING -i eth0 -p tcp --dport 64049 -j DNAT --to 10.4.4.49:22
-A PREROUTING -i eth0 -p tcp --dport 64050 -j DNAT --to 10.4.4.50:22
-A PREROUTING -i eth0 -p tcp --dport 64051 -j DNAT --to 10.4.4.51:22
-A PREROUTING -i eth0 -p tcp --dport 64052 -j DNAT --to 10.4.4.52:22
-A PREROUTING -i eth0 -p tcp --dport 64053 -j DNAT --to 10.4.4.53:22
-A PREROUTING -i eth0 -p tcp --dport 64054 -j DNAT --to 10.4.4.54:22
-A PREROUTING -i eth0 -p tcp --dport 64055 -j DNAT --to 10.4.4.55:22
-A PREROUTING -i eth0 -p tcp --dport 64056 -j DNAT --to 10.4.4.56:22
-A PREROUTING -i eth0 -p tcp --dport 64057 -j DNAT --to 10.4.4.57:22
-A PREROUTING -i eth0 -p tcp --dport 64058 -j DNAT --to 10.4.4.58:22
-A PREROUTING -i eth0 -p tcp --dport 64059 -j DNAT --to 10.4.4.59:22
-A PREROUTING -i eth0 -p tcp --dport 64060 -j DNAT --to 10.4.4.60:22
-A PREROUTING -i eth0 -p tcp --dport 64061 -j DNAT --to 10.4.4.61:22
-A PREROUTING -i eth0 -p tcp --dport 64062 -j DNAT --to 10.4.4.62:22
-A PREROUTING -i eth0 -p tcp --dport 64063 -j DNAT --to 10.4.4.63:22
-A PREROUTING -i eth0 -p tcp --dport 64064 -j DNAT --to 10.4.4.64:22
-A PREROUTING -i eth0 -p tcp --dport 64065 -j DNAT --to 10.4.4.65:22
-A PREROUTING -i eth0 -p tcp --dport 64066 -j DNAT --to 10.4.4.66:22
-A PREROUTING -i eth0 -p tcp --dport 64067 -j DNAT --to 10.4.4.67:22
-A PREROUTING -i eth0 -p tcp --dport 64068 -j DNAT --to 10.4.4.68:22
-A PREROUTING -i eth0 -p tcp --dport 64069 -j DNAT --to 10.4.4.69:22
-A PREROUTING -i eth0 -p tcp --dport 64070 -j DNAT --to 10.4.4.70:22
-A PREROUTING -i eth0 -p tcp --dport 64071 -j DNAT --to 10.4.4.71:22
-A PREROUTING -i eth0 -p tcp --dport 64072 -j DNAT --to 10.4.4.72:22
-A PREROUTING -i eth0 -p tcp --dport 64073 -j DNAT --to 10.4.4.73:22
-A PREROUTING -i eth0 -p tcp --dport 64074 -j DNAT --to 10.4.4.74:22
-A PREROUTING -i eth0 -p tcp --dport 64075 -j DNAT --to 10.4.4.75:22
-A PREROUTING -i eth0 -p tcp --dport 64076 -j DNAT --to 10.4.4.76:22
-A PREROUTING -i eth0 -p tcp --dport 64077 -j DNAT --to 10.4.4.77:22
-A PREROUTING -i eth0 -p tcp --dport 64078 -j DNAT --to 10.4.4.78:22
-A PREROUTING -i eth0 -p tcp --dport 64079 -j DNAT --to 10.4.4.79:22
-A PREROUTING -i eth0 -p tcp --dport 64080 -j DNAT --to 10.4.4.80:22
-A PREROUTING -i eth0 -p tcp --dport 64081 -j DNAT --to 10.4.4.81:22
-A PREROUTING -i eth0 -p tcp --dport 64082 -j DNAT --to 10.4.4.82:22
-A PREROUTING -i eth0 -p tcp --dport 64083 -j DNAT --to 10.4.4.83:22
-A PREROUTING -i eth0 -p tcp --dport 64084 -j DNAT --to 10.4.4.84:22
-A PREROUTING -i eth0 -p tcp --dport 64085 -j DNAT --to 10.4.4.85:22
-A PREROUTING -i eth0 -p tcp --dport 64086 -j DNAT --to 10.4.4.86:22
-A PREROUTING -i eth0 -p tcp --dport 64087 -j DNAT --to 10.4.4.87:22
-A PREROUTING -i eth0 -p tcp --dport 64088 -j DNAT --to 10.4.4.88:22
-A PREROUTING -i eth0 -p tcp --dport 64089 -j DNAT --to 10.4.4.89:22
-A PREROUTING -i eth0 -p tcp --dport 64090 -j DNAT --to 10.4.4.90:22
-A PREROUTING -i eth0 -p tcp --dport 64091 -j DNAT --to 10.4.4.91:22
-A PREROUTING -i eth0 -p tcp --dport 64092 -j DNAT --to 10.4.4.92:22
-A PREROUTING -i eth0 -p tcp --dport 64093 -j DNAT --to 10.4.4.93:22
-A PREROUTING -i eth0 -p tcp --dport 64094 -j DNAT --to 10.4.4.94:22
-A PREROUTING -i eth0 -p tcp --dport 64095 -j DNAT --to 10.4.4.95:22
-A PREROUTING -i eth0 -p tcp --dport 64096 -j DNAT --to 10.4.4.96:22
-A PREROUTING -i eth0 -p tcp --dport 64097 -j DNAT --to 10.4.4.97:22
-A PREROUTING -i eth0 -p tcp --dport 64098 -j DNAT --to 10.4.4.98:22
-A PREROUTING -i eth0 -p tcp --dport 64099 -j DNAT --to 10.4.4.99:22
-A PREROUTING -i eth0 -p tcp --dport 64100 -j DNAT --to 10.4.4.100:22
-A PREROUTING -i eth0 -p tcp --dport 64101 -j DNAT --to 10.4.4.101:22
-A PREROUTING -i eth0 -p tcp --dport 64102 -j DNAT --to 10.4.4.102:22
-A PREROUTING -i eth0 -p tcp --dport 64103 -j DNAT --to 10.4.4.103:22
-A PREROUTING -i eth0 -p tcp --dport 64104 -j DNAT --to 10.4.4.104:22
-A PREROUTING -i eth0 -p tcp --dport 64105 -j DNAT --to 10.4.4.105:22
-A PREROUTING -i eth0 -p tcp --dport 64106 -j DNAT --to 10.4.4.106:22
-A PREROUTING -i eth0 -p tcp --dport 64107 -j DNAT --to 10.4.4.107:22
-A PREROUTING -i eth0 -p tcp --dport 64108 -j DNAT --to 10.4.4.108:22
-A PREROUTING -i eth0 -p tcp --dport 64109 -j DNAT --to 10.4.4.109:22
-A PREROUTING -i eth0 -p tcp --dport 64110 -j DNAT --to 10.4.4.110:22
-A PREROUTING -i eth0 -p tcp --dport 64111 -j DNAT --to 10.4.4.111:22
-A PREROUTING -i eth0 -p tcp --dport 64112 -j DNAT --to 10.4.4.112:22
-A PREROUTING -i eth0 -p tcp --dport 64113 -j DNAT --to 10.4.4.113:22
-A PREROUTING -i eth0 -p tcp --dport 64114 -j DNAT --to 10.4.4.114:22
-A PREROUTING -i eth0 -p tcp --dport 64115 -j DNAT --to 10.4.4.115:22
-A PREROUTING -i eth0 -p tcp --dport 64116 -j DNAT --to 10.4.4.116:22
-A PREROUTING -i eth0 -p tcp --dport 64117 -j DNAT --to 10.4.4.117:22
-A PREROUTING -i eth0 -p tcp --dport 64118 -j DNAT --to 10.4.4.118:22
-A PREROUTING -i eth0 -p tcp --dport 64119 -j DNAT --to 10.4.4.119:22
-A PREROUTING -i eth0 -p tcp --dport 64120 -j DNAT --to 10.4.4.120:22
-A PREROUTING -i eth0 -p tcp --dport 64121 -j DNAT --to 10.4.4.121:22
-A PREROUTING -i eth0 -p tcp --dport 64122 -j DNAT --to 10.4.4.122:22
-A PREROUTING -i eth0 -p tcp --dport 64123 -j DNAT --to 10.4.4.123:22
-A PREROUTING -i eth0 -p tcp --dport 64124 -j DNAT --to 10.4.4.124:22
-A PREROUTING -i eth0 -p tcp --dport 64125 -j DNAT --to 10.4.4.125:22
-A PREROUTING -i eth0 -p tcp --dport 64126 -j DNAT --to 10.4.4.126:22
-A PREROUTING -i eth0 -p tcp --dport 64127 -j DNAT --to 10.4.4.127:22
-A PREROUTING -i eth0 -p tcp --dport 64128 -j DNAT --to 10.4.4.128:22
-A PREROUTING -i eth0 -p tcp --dport 64129 -j DNAT --to 10.4.4.129:22
-A PREROUTING -i eth0 -p tcp --dport 64130 -j DNAT --to 10.4.4.130:22
-A PREROUTING -i eth0 -p tcp --dport 64131 -j DNAT --to 10.4.4.131:22
-A PREROUTING -i eth0 -p tcp --dport 64132 -j DNAT --to 10.4.4.132:22
-A PREROUTING -i eth0 -p tcp --dport 64133 -j DNAT --to 10.4.4.133:22
-A PREROUTING -i eth0 -p tcp --dport 64134 -j DNAT --to 10.4.4.134:22
-A PREROUTING -i eth0 -p tcp --dport 64135 -j DNAT --to 10.4.4.135:22
-A PREROUTING -i eth0 -p tcp --dport 64136 -j DNAT --to 10.4.4.136:22
-A PREROUTING -i eth0 -p tcp --dport 64137 -j DNAT --to 10.4.4.137:22
-A PREROUTING -i eth0 -p tcp --dport 64138 -j DNAT --to 10.4.4.138:22
-A PREROUTING -i eth0 -p tcp --dport 64139 -j DNAT --to 10.4.4.139:22
-A PREROUTING -i eth0 -p tcp --dport 64140 -j DNAT --to 10.4.4.140:22
-A PREROUTING -i eth0 -p tcp --dport 64141 -j DNAT --to 10.4.4.141:22
-A PREROUTING -i eth0 -p tcp --dport 64142 -j DNAT --to 10.4.4.142:22
-A PREROUTING -i eth0 -p tcp --dport 64143 -j DNAT --to 10.4.4.143:22
-A PREROUTING -i eth0 -p tcp --dport 64144 -j DNAT --to 10.4.4.144:22
-A PREROUTING -i eth0 -p tcp --dport 64145 -j DNAT --to 10.4.4.145:22
-A PREROUTING -i eth0 -p tcp --dport 64146 -j DNAT --to 10.4.4.146:22
-A PREROUTING -i eth0 -p tcp --dport 64147 -j DNAT --to 10.4.4.147:22
-A PREROUTING -i eth0 -p tcp --dport 64148 -j DNAT --to 10.4.4.148:22
-A PREROUTING -i eth0 -p tcp --dport 64149 -j DNAT --to 10.4.4.149:22
-A PREROUTING -i eth0 -p tcp --dport 64150 -j DNAT --to 10.4.4.150:22
-A PREROUTING -i eth0 -p tcp --dport 64151 -j DNAT --to 10.4.4.151:22
-A PREROUTING -i eth0 -p tcp --dport 64152 -j DNAT --to 10.4.4.152:22
-A PREROUTING -i eth0 -p tcp --dport 64153 -j DNAT --to 10.4.4.153:22
-A PREROUTING -i eth0 -p tcp --dport 64154 -j DNAT --to 10.4.4.154:22
-A PREROUTING -i eth0 -p tcp --dport 64155 -j DNAT --to 10.4.4.155:22
-A PREROUTING -i eth0 -p tcp --dport 64156 -j DNAT --to 10.4.4.156:22
-A PREROUTING -i eth0 -p tcp --dport 64157 -j DNAT --to 10.4.4.157:22
-A PREROUTING -i eth0 -p tcp --dport 64158 -j DNAT --to 10.4.4.158:22
-A PREROUTING -i eth0 -p tcp --dport 64159 -j DNAT --to 10.4.4.159:22
-A PREROUTING -i eth0 -p tcp --dport 64160 -j DNAT --to 10.4.4.160:22
-A PREROUTING -i eth0 -p tcp --dport 64161 -j DNAT --to 10.4.4.161:22
-A PREROUTING -i eth0 -p tcp --dport 64162 -j DNAT --to 10.4.4.162:22
-A PREROUTING -i eth0 -p tcp --dport 64163 -j DNAT --to 10.4.4.163:22
-A PREROUTING -i eth0 -p tcp --dport 64164 -j DNAT --to 10.4.4.164:22
-A PREROUTING -i eth0 -p tcp --dport 64165 -j DNAT --to 10.4.4.165:22
-A PREROUTING -i eth0 -p tcp --dport 64166 -j DNAT --to 10.4.4.166:22
-A PREROUTING -i eth0 -p tcp --dport 64167 -j DNAT --to 10.4.4.167:22
-A PREROUTING -i eth0 -p tcp --dport 64168 -j DNAT --to 10.4.4.168:22
-A PREROUTING -i eth0 -p tcp --dport 64169 -j DNAT --to 10.4.4.169:22
-A PREROUTING -i eth0 -p tcp --dport 64170 -j DNAT --to 10.4.4.170:22
-A PREROUTING -i eth0 -p tcp --dport 64171 -j DNAT --to 10.4.4.171:22
-A PREROUTING -i eth0 -p tcp --dport 64172 -j DNAT --to 10.4.4.172:22
-A PREROUTING -i eth0 -p tcp --dport 64173 -j DNAT --to 10.4.4.173:22
-A PREROUTING -i eth0 -p tcp --dport 64174 -j DNAT --to 10.4.4.174:22
-A PREROUTING -i eth0 -p tcp --dport 64175 -j DNAT --to 10.4.4.175:22
-A PREROUTING -i eth0 -p tcp --dport 64176 -j DNAT --to 10.4.4.176:22
-A PREROUTING -i eth0 -p tcp --dport 64177 -j DNAT --to 10.4.4.177:22
-A PREROUTING -i eth0 -p tcp --dport 64178 -j DNAT --to 10.4.4.178:22
-A PREROUTING -i eth0 -p tcp --dport 64179 -j DNAT --to 10.4.4.179:22
-A PREROUTING -i eth0 -p tcp --dport 64180 -j DNAT --to 10.4.4.180:22
-A PREROUTING -i eth0 -p tcp --dport 64181 -j DNAT --to 10.4.4.181:22
-A PREROUTING -i eth0 -p tcp --dport 64182 -j DNAT --to 10.4.4.182:22
-A PREROUTING -i eth0 -p tcp --dport 64183 -j DNAT --to 10.4.4.183:22
-A PREROUTING -i eth0 -p tcp --dport 64184 -j DNAT --to 10.4.4.184:22
-A PREROUTING -i eth0 -p tcp --dport 64185 -j DNAT --to 10.4.4.185:22
-A PREROUTING -i eth0 -p tcp --dport 64186 -j DNAT --to 10.4.4.186:22
-A PREROUTING -i eth0 -p tcp --dport 64187 -j DNAT --to 10.4.4.187:22
-A PREROUTING -i eth0 -p tcp --dport 64188 -j DNAT --to 10.4.4.188:22
-A PREROUTING -i eth0 -p tcp --dport 64189 -j DNAT --to 10.4.4.189:22
-A PREROUTING -i eth0 -p tcp --dport 64190 -j DNAT --to 10.4.4.190:22
-A PREROUTING -i eth0 -p tcp --dport 64191 -j DNAT --to 10.4.4.191:22
-A PREROUTING -i eth0 -p tcp --dport 64192 -j DNAT --to 10.4.4.192:22
-A PREROUTING -i eth0 -p tcp --dport 64193 -j DNAT --to 10.4.4.193:22
-A PREROUTING -i eth0 -p tcp --dport 64194 -j DNAT --to 10.4.4.194:22
-A PREROUTING -i eth0 -p tcp --dport 64195 -j DNAT --to 10.4.4.195:22
-A PREROUTING -i eth0 -p tcp --dport 64196 -j DNAT --to 10.4.4.196:22
-A PREROUTING -i eth0 -p tcp --dport 64197 -j DNAT --to 10.4.4.197:22
-A PREROUTING -i eth0 -p tcp --dport 64198 -j DNAT --to 10.4.4.198:22
-A PREROUTING -i eth0 -p tcp --dport 64199 -j DNAT --to 10.4.4.199:22
-A PREROUTING -i eth0 -p tcp --dport 64200 -j DNAT --to 10.4.4.200:22
-A PREROUTING -i eth0 -p tcp --dport 64201 -j DNAT --to 10.4.4.201:22
-A PREROUTING -i eth0 -p tcp --dport 64202 -j DNAT --to 10.4.4.202:22
-A PREROUTING -i eth0 -p tcp --dport 64203 -j DNAT --to 10.4.4.203:22
-A PREROUTING -i eth0 -p tcp --dport 64204 -j DNAT --to 10.4.4.204:22
-A PREROUTING -i eth0 -p tcp --dport 64205 -j DNAT --to 10.4.4.205:22
-A PREROUTING -i eth0 -p tcp --dport 64206 -j DNAT --to 10.4.4.206:22
-A PREROUTING -i eth0 -p tcp --dport 64207 -j DNAT --to 10.4.4.207:22
-A PREROUTING -i eth0 -p tcp --dport 64208 -j DNAT --to 10.4.4.208:22
-A PREROUTING -i eth0 -p tcp --dport 64209 -j DNAT --to 10.4.4.209:22
-A PREROUTING -i eth0 -p tcp --dport 64210 -j DNAT --to 10.4.4.210:22
-A PREROUTING -i eth0 -p tcp --dport 64211 -j DNAT --to 10.4.4.211:22
-A PREROUTING -i eth0 -p tcp --dport 64212 -j DNAT --to 10.4.4.212:22
-A PREROUTING -i eth0 -p tcp --dport 64213 -j DNAT --to 10.4.4.213:22
-A PREROUTING -i eth0 -p tcp --dport 64214 -j DNAT --to 10.4.4.214:22
-A PREROUTING -i eth0 -p tcp --dport 64215 -j DNAT --to 10.4.4.215:22
-A PREROUTING -i eth0 -p tcp --dport 64216 -j DNAT --to 10.4.4.216:22
-A PREROUTING -i eth0 -p tcp --dport 64217 -j DNAT --to 10.4.4.217:22
-A PREROUTING -i eth0 -p tcp --dport 64218 -j DNAT --to 10.4.4.218:22
-A PREROUTING -i eth0 -p tcp --dport 64219 -j DNAT --to 10.4.4.219:22
-A PREROUTING -i eth0 -p tcp --dport 64220 -j DNAT --to 10.4.4.220:22
-A PREROUTING -i eth0 -p tcp --dport 64221 -j DNAT --to 10.4.4.221:22
-A PREROUTING -i eth0 -p tcp --dport 64222 -j DNAT --to 10.4.4.222:22
-A PREROUTING -i eth0 -p tcp --dport 64223 -j DNAT --to 10.4.4.223:22
-A PREROUTING -i eth0 -p tcp --dport 64224 -j DNAT --to 10.4.4.224:22
-A PREROUTING -i eth0 -p tcp --dport 64225 -j DNAT --to 10.4.4.225:22
-A PREROUTING -i eth0 -p tcp --dport 64226 -j DNAT --to 10.4.4.226:22
-A PREROUTING -i eth0 -p tcp --dport 64227 -j DNAT --to 10.4.4.227:22
-A PREROUTING -i eth0 -p tcp --dport 64228 -j DNAT --to 10.4.4.228:22
-A PREROUTING -i eth0 -p tcp --dport 64229 -j DNAT --to 10.4.4.229:22
-A PREROUTING -i eth0 -p tcp --dport 64230 -j DNAT --to 10.4.4.230:22
-A PREROUTING -i eth0 -p tcp --dport 64231 -j DNAT --to 10.4.4.231:22
-A PREROUTING -i eth0 -p tcp --dport 64232 -j DNAT --to 10.4.4.232:22
-A PREROUTING -i eth0 -p tcp --dport 64233 -j DNAT --to 10.4.4.233:22
-A PREROUTING -i eth0 -p tcp --dport 64234 -j DNAT --to 10.4.4.234:22
-A PREROUTING -i eth0 -p tcp --dport 64235 -j DNAT --to 10.4.4.235:22
-A PREROUTING -i eth0 -p tcp --dport 64236 -j DNAT --to 10.4.4.236:22
-A PREROUTING -i eth0 -p tcp --dport 64237 -j DNAT --to 10.4.4.237:22
-A PREROUTING -i eth0 -p tcp --dport 64238 -j DNAT --to 10.4.4.238:22
-A PREROUTING -i eth0 -p tcp --dport 64239 -j DNAT --to 10.4.4.239:22
-A PREROUTING -i eth0 -p tcp --dport 64240 -j DNAT --to 10.4.4.240:22
-A PREROUTING -i eth0 -p tcp --dport 64241 -j DNAT --to 10.4.4.241:22
-A PREROUTING -i eth0 -p tcp --dport 64242 -j DNAT --to 10.4.4.242:22
-A PREROUTING -i eth0 -p tcp --dport 64243 -j DNAT --to 10.4.4.243:22
-A PREROUTING -i eth0 -p tcp --dport 64244 -j DNAT --to 10.4.4.244:22
-A PREROUTING -i eth0 -p tcp --dport 64245 -j DNAT --to 10.4.4.245:22
-A PREROUTING -i eth0 -p tcp --dport 64246 -j DNAT --to 10.4.4.246:22
-A PREROUTING -i eth0 -p tcp --dport 64247 -j DNAT --to 10.4.4.247:22
-A PREROUTING -i eth0 -p tcp --dport 64248 -j DNAT --to 10.4.4.248:22
-A PREROUTING -i eth0 -p tcp --dport 64249 -j DNAT --to 10.4.4.249:22
-A PREROUTING -i eth0 -p tcp --dport 64250 -j DNAT --to 10.4.4.250:22
-A PREROUTING -i eth0 -p tcp --dport 64251 -j DNAT --to 10.4.4.251:22
-A PREROUTING -i eth0 -p tcp --dport 64252 -j DNAT --to 10.4.4.252:22
-A PREROUTING -i eth0 -p tcp --dport 64253 -j DNAT --to 10.4.4.253:22
-A PREROUTING -i eth0 -p tcp --dport 64254 -j DNAT --to 10.4.4.254:22
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A FORWARD -i eth1 -j ACCEPT
-A INPUT -j DROP
COMMIT
